Ajout getUsersByRole
